# coding-night

./: LICENSE  README.md  requirements.txt
2020-06-25/: Answers.ipynb  Challenge.ipynb
Automation-with-Selenium/: README.md  app.py  requirements.txt  start.py
Coin Drawer Kata/: README.md  solution.py
fastapi/: README.md  app.py  requirements.txt  start.py  test_app.py
fastapi/templates/: index.html
gooey-gui/: README.md  requirements.txt  solution.py  start.py
hypermodern_python/: .pre-commit-config.yaml  README.md  pyproject.toml
hypermodern_python/src/hypermodern_python/: console.py
hypermodern_python/tests/: test_console.py
pathlib/: Answers.ipynb  Challenge.ipynb  exercise.py  setup.py
pathlib_/: Answers.ipynb  Challenge.ipynb
string calculator/: Pipfile  calculate.py  readme.md  test_calculate.py
string calculator/djfurman_solution/: calculate.py  test_calculate.py
web-scraping-intro/: Challenge.ipynb
